Proyecto Individual/force-app/main/default/objects/User_Unit__c/User_Unit__c.object-meta.xml
<CustomObject>
    <label>User - Unit</label>
    <nameField>
        <displayFormat>UU-{0000}</displayFormat>
        <label>User - Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User - Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>