Proyecto Individual/force-app/main/default/objects/User_Unit__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>User - Units</relationshipLabel>
    <relationshipName>User_Units</relationshipName>
    <type>Lookup</type>
</CustomField>