Proyecto Individual/force-app/main/default/objects/User_Unit__c/fields/User_Module__c.field-meta.xml
<CustomField>
    <fullName>User_Module__c</fullName>
    <label>User - Module</label>
    <referenceTo>User_Module__c</referenceTo>
    <relationshipLabel>User - Units</relationshipLabel>
    <relationshipName>User_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>